# adventofcode

./: .gitignore  Makefile  adventofcode.c  adventofcode.cpp  adventofcode.h  day1.c  day1.cpp  day2.cpp  day3.cpp  day5.cpp  util.c  util.cpp  util.h
2020/: Makefile  adventofcode.cpp  adventofcode.h  day1.cpp  day10.cpp  day13.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  graph.h  util.cpp  util.h
2020/cpp/: adventofcode.cpp  adventofcode.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day2.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  graph.cpp  util.cpp  util.h
2020/rust/: .gitignore  Cargo.toml  new_solution.sh
2020/rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  solver.rs  util.rs  web.rs
2020/rust/src/days/: day10.rs  day2.rs  day5.rs  day7.rs  day9.rs  mod.rs
