[package]
name = "adventofcode"
version = "0.1.0"
authors = ["John Ingve Olsen <johningveolsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
indoc = "1.0"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
